tooling/nargo_cli/tests/snapshots/execution_success/1327_concrete_in_generic/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
[1327_concrete_in_generic] Circuit output: Field(1)
